internal/xds/translator/testdata/out/xds-ir/http-route-rewrite-sufixx-with-slash-url-prefix.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - gateway.envoyproxy.io
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: http
    name: first-listener/gateway_envoyproxy_io
    routes:
    - match:
        headers:
        - name: :authority
          stringMatch:
            exact: gateway.envoyproxy.io
        pathSeparatedPrefix: /origin
      name: rewrite-route
      route:
        cluster: rewrite-route-dest
        prefixRewrite: /rewrite
        upgradeConfigs:
        - upgradeType: websocket
